documentacion/obtenida/ARINC 429/driver and software/CM429-1/API/C41W32NET.VB

    Public Declare Function C41_KernMEMRdsW Lib "C41W32.DLL" Alias "_C41_KernMEMRdsW@16" (ByRef bufptr As UInt16, ByVal addrval As UInt16, ByVal countval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_KernMEMRdW Lib "C41W32.DLL" Alias "_C41_KernMEMRdW@12" (ByRef valueptr As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_KernMEMWrsW Lib "C41W32.DLL" Alias "_C41_KernMEMWrsW@16" (ByRef bufptr As UInt16, ByVal addrval As UInt16, ByVal countval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_KernMEMWrW Lib "C41W32.DLL" Alias "_C41_KernMEMWrW@12" (ByVal value As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_KernQuick Lib "C41W32.DLL" Alias "_C41_KernQuick@8" (ByVal flag As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_KernStatusEx Lib "C41W32.DLL" Alias "_C41_KernStatusEx@16" (ByRef valueptr As UInt32, ByVal typeval As UInt32, ByVal index As UInt32, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_ListSetRcv Lib "C41W32.DLL" Alias "_C41_ListSetRcv@12" (ByVal listaddr As UInt16, ByVal msgnum As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Function C41_ListSetXmt Lib "C41W32.DLL" Alias "_C41_ListSetXmt@12" (ByVal listaddr As UInt16, ByVal channum As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Function C41_MakeLong Lib "C41W32.DLL" Alias "_C41_MakeLong@8" (ByVal valh As UInt16, ByVal vall As UInt16) As UInt32
    Public Declare Function C41_MantToAscii Lib "C41W32.DLL" Alias "_C41_MantToAscii@12" (ByRef buf As String, ByVal mant As Int32, ByVal exp As Int32) As UInt32
    Public Declare Function C41_Mask Lib "C41W32.DLL" Alias "_C41_Mask@8" (ByVal dataval As UInt32, ByVal cntval As UInt16) As UInt32
    Public Declare Sub C41_MaxMant Lib "C41W32.DLL" Alias "_C41_MaxMant@8" (ByRef mant As Int32, ByRef exp As Int32)
    Public Declare Sub C41_MemFill Lib "C41W32.DLL" Alias "_C41_MemFill@16" (ByVal value As UInt16, ByVal addrval As UInt16, ByVal countval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub C41_MemStrRd Lib "C41W32.DLL" Alias "_C41_MemStrRd@16" (ByRef valueptr As UInt16, ByVal addrval As UInt16, ByVal countval As UInt16, ByVal handleval As UInt32)
    Public Declare Sub C41_MemStrWr Lib "C41W32.DLL" Alias "_C41_MemStrWr@16" (ByRef valueptr As UInt16, ByVal addrval As UInt16, ByVal countval As UInt16, ByVal handleval As UInt32)
    Public Declare Function C41_MEMWINRdB Lib "C41W32.DLL" Alias "_C41_MEMWINRdB@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Function C41_MEMWINRdL Lib "C41W32.DLL" Alias "_C41_MEMWINRdL@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function C41_MEMWINRdW Lib "C41W32.DLL" Alias "_C41_MEMWINRdW@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub C41_MEMWINWrB Lib "C41W32.DLL" Alias "_C41_MEMWINWrB@12" (ByVal value As UInt16, ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Sub C41_MEMWINWrL Lib "C41W32.DLL" Alias "_C41_MEMWINWrL@12" (ByVal value As UInt32, ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Sub C41_MEMWINWrW Lib "C41W32.DLL" Alias "_C41_MEMWINWrW@12" (ByVal value As UInt16, ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Sub C41_MemWipe Lib "C41W32.DLL" Alias "_C41_MemWipe@4" (ByVal handleval As UInt32)
    Public Declare Function C41_Mod Lib "C41W32.DLL" Alias "_C41_Mod@8" (ByVal moda As UInt32, ByVal modb As UInt32) As UInt32
    Public Declare Function C41_MsgAddr Lib "C41W32.DLL" Alias "_C41_MsgAddr@8" (ByVal msgnum As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Function C41_MsgArincPeek Lib "C41W32.DLL" Alias "_C41_MsgArincPeek@8" (ByVal msgnum As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Sub C41_MsgArincPoke Lib "C41W32.DLL" Alias "_C41_MsgArincPoke@12" (ByVal msgval As UInt32, ByVal msgnum As Int32, ByVal handleval As UInt32)
    Public Declare Function C41_MsgClear Lib "C41W32.DLL" Alias "_C41_MsgClear@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C41_MsgDisable Lib "C41W32.DLL" Alias "_C41_MsgDisable@8" (ByVal msgnum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_MsgEnable Lib "C41W32.DLL" Alias "_C41_MsgEnable@8" (ByVal msgnum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_MsgEncoderPeek Lib "C41W32.DLL" Alias "_C41_MsgEncoderPeek@8" (ByVal msgnum As Int32, ByVal handleval As UInt32) As UInt32
    Public Declare Sub C41_MsgEncoderPoke Lib "C41W32.DLL" Alias "_C41_MsgEncoderPoke@12" (ByVal msgval As UInt32, ByVal msgnum As Int32, ByVal handleval As UInt32)
    Public Declare Function C41_MsgReset Lib "C41W32.DLL" Alias "_C41_MsgReset@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C41_MsgWipe Lib "C41W32.DLL" Alias "_C41_MsgWipe@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C41_Mul Lib "C41W32.DLL" Alias "_C41_Mul@8" (ByVal mula As UInt32, ByVal mulb As UInt32) As UInt32
    Public Declare Sub C41_NormalMant Lib "C41W32.DLL" Alias "_C41_NormalMant@8" (ByRef mant As Int32, ByRef exp As Int32)
    Public Declare Function C41_PortRd Lib "C41W32.DLL" Alias "_C41_PortRd@8" (ByVal addrval As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Sub C41_PortWr Lib "C41W32.DLL" Alias "_C41_PortWr@12" (ByVal value As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Function C41_ProgRd Lib "C41W32.DLL" Alias "_C41_ProgRd@8" (ByVal addrval As UInt16, ByVal handleval As UInt32) As UInt16
    Public Declare Sub C41_ProgWr Lib "C41W32.DLL" Alias "_C41_ProgWr@12" (ByVal value As UInt16, ByVal addrval As UInt16, ByVal handleval As UInt32)
    Public Declare Function C41_RAMRdB Lib "C41W32.DLL" Alias "_C41_RAMRdB@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Function C41_RAMRdL Lib "C41W32.DLL" Alias "_C41_RAMRdL@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function C41_RAMRdW Lib "C41W32.DLL" Alias "_C41_RAMRdW@8" (ByVal addrval As UInt32, ByVal handleval As UInt32) As UInt16
    Public Declare Sub C41_RAMWrB Lib "C41W32.DLL" Alias "_C41_RAMWrB@12" (ByVal value As UInt16, ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Sub C41_RAMWrL Lib "C41W32.DLL" Alias "_C41_RAMWrL@12" (ByVal value As UInt32, ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Sub C41_RAMWrW Lib "C41W32.DLL" Alias "_C41_RAMWrW@12" (ByVal value As UInt16, ByVal addrval As UInt32, ByVal handleval As UInt32)
    Public Declare Function C41_SchedAddr Lib "C41W32.DLL" Alias "_C41_SchedAddr@12" (ByVal schindex As Int32, ByVal channum As Int32, ByVal handleval As UInt32) As UInt16
    Public Declare Function C41_SchedClear Lib "C41W32.DLL" Alias "_C41_SchedClear@8" (ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_SchedFixedGap Lib "C41W32.DLL" Alias "_C41_SchedFixedGap@12" (ByVal gapval As UInt16, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_SchedInsert Lib "C41W32.DLL" Alias "_C41_SchedInsert@20" (ByVal schflag As UInt16, ByVal schopcode As UInt16, ByVal schoperand As UInt16, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_SchedNop Lib "C41W32.DLL" Alias "_C41_SchedNop@8" (ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_SchedRd Lib "C41W32.DLL" Alias "_C41_SchedRd@16" (ByRef valueptr As UInt16, ByVal schindex As Int32, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_SchedUser Lib "C41W32.DLL" Alias "_C41_SchedUser@12" (ByVal useraddr As UInt16, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_SchedWipe Lib "C41W32.DLL" Alias "_C41_SchedWipe@8" (ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_SchedWr Lib "C41W32.DLL" Alias "_C41_SchedWr@16" (ByRef valueptr As UInt16, ByVal schindex As Int32, ByVal channum As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_SeqInterval Lib "C41W32.DLL" Alias "_C41_SeqInterval@8" (ByVal interval As Int32, ByVal handleval As UInt32) As Int32
    Public Declare Function C41_SeqIsRunning Lib "C41W32.DLL" Alias "_C41_SeqIsRunning@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C41_SeqRdEx Lib "C41W32.DLL" Alias "_C41_SeqRdEx@12" (ByRef buf As UInt16, ByVal bufcount As UInt32, ByVal handleval As UInt32) As UInt32
    Public Declare Function C41_SeqStart Lib "C41W32.DLL" Alias "_C41_SeqStart@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Function C41_SeqStop Lib "C41W32.DLL" Alias "_C41_SeqStop@4" (ByVal handleval As UInt32) As UInt16
    Public Declare Function C41_SeqWipe Lib "C41W32.DLL" Alias "_C41_SeqWipe@4" (ByVal handleval As UInt32) As Int32
    Public Declare Function C41_Shl Lib "C41W32.DLL" Alias "_C41_Shl@8" (ByVal dataval As UInt32, ByVal cntval As UInt16) As UInt32
    Public Declare Function C41_Shr Lib "C41W32.DLL" Alias "_C41_Shr@8" (ByVal dataval As UInt32, ByVal cntval As UInt16) As UInt32
    Public Declare Function C41_SignMant Lib "C41W32.DLL" Alias "_C41_SignMant@4" (ByRef str As String) As UInt16
    Public Declare Function C41_ValAsciiCmpi Lib "C41W32.DLL" Alias "_C41_ValAsciiCmpi@8" (ByRef str1 As String, ByRef str2 As String) As Int32
    Public Declare Function C41_ValAsciiCpy Lib "C41W32.DLL" Alias "_C41_ValAsciiCpy@12" (ByRef strdest As String, ByRef strsrc As String, ByVal count As Int32) As UInt32
    Public Declare Sub C41_ValAsciiTrimLead Lib "C41W32.DLL" Alias "_C41_ValAsciiTrimLead@4" (ByRef buf As String)
    Public Declare Sub C41_ValAsciiTrimTrail Lib "C41W32.DLL" Alias "_C41_ValAsciiTrimTrail@4" (ByRef buf As String)
    Public Declare Function C41_ValFromAscii Lib "C41W32.DLL" Alias "_C41_ValFromAscii@8" (ByRef asciistr As String, ByVal radixval As Int32) As UInt32
    Public Declare Function C41_ValIncAscii Lib "C41W32.DLL" Alias "_C41_ValIncAscii@4" (ByRef asciistr As String) As UInt32
    Public Declare Function C41_ValInccAscii Lib "C41W32.DLL" Alias "_C41_ValInccAscii@4" (ByRef asciistr As String) As UInt32
    Public Declare Function C41_ValIsLower Lib "C41W32.DLL" Alias "_C41_ValIsLower@4" (ByVal value As Int32) As Int32
    Public Declare Function C41_ValLenAscii Lib "C41W32.DLL" Alias "_C41_ValLenAscii@8" (ByVal numbits As Int32, ByVal radixval As Int32) As Int32
    Public Declare Function C41_ValToAscii Lib "C41W32.DLL" Alias "_C41_ValToAscii@16" (ByVal value As UInt32, ByRef asciistr As String, ByVal numbits As Int32, ByVal radixval As Int32) As UInt32
    Public Declare Function C41_ValToUpper Lib "C41W32.DLL" Alias "_C41_ValToUpper@4" (ByVal value As Int32) As Int32
    Public Declare Function C41_Wipe Lib "C41W32.DLL" Alias "_C41_Wipe@4" (ByVal handleval As UInt32) As Int32

    Public Const SDI00 As UInt16 = &H1   '//Enable SDI00
    Public Const SDI01 As UInt16 = &H2   '//Enable SDI01
    Public Const SDI10 As UInt16 = &H4   '//Enable SDI10
    Public Const SDI11 As UInt16 = &H8   '//Enable SDI11
    Public Const SDIALL As UInt16 = &HF  '//Enable all SDIs

    Public Const RCVCH0 As Int16 = 0    '//Receive  channel 0
    Public Const RCVCH1 As Int16 = 1    '//Receive  channel 1
    Public Const RCVCH2 As Int16 = 2    '//Receive  channel 2
    Public Const RCVCH3 As Int16 = 3    '//Receive  channel 3
    Public Const XMTCH0 As Int16 = 4    '//Transmit channel 0
    Public Const XMTCH1 As Int16 = 5    '//Transmit channel 1
